--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -366,15 +366,15 @@
                             <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AYe-WQ-1YM">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AYe-WQ-1YM">
                                     <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="70" id="QMf-Nn-b7X"/>
                                         <constraint firstAttribute="height" constant="70" id="ll4-06-u5n"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jz0-d3-imh">
-                                    <rect key="frame" x="78" y="0.0" width="382" height="43"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jz0-d3-imh">
+                                    <rect key="frame" x="78" y="0.0" width="57" height="70"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="70" id="MN3-1A-yPh"/>
                                     </constraints>
@@ -384,6 +384,12 @@
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="jz0-d3-imh" firstAttribute="leading" secondItem="AYe-WQ-1YM" secondAttribute="trailing" constant="8" id="61N-97-aom"/>
+                                <constraint firstItem="AYe-WQ-1YM" firstAttribute="leading" secondItem="N3K-Ua-kfq" secondAttribute="leading" id="Ld7-Q7-0s2"/>
+                                <constraint firstItem="jz0-d3-imh" firstAttribute="top" secondItem="N3K-Ua-kfq" secondAttribute="top" id="erZ-yH-oiL"/>
+                                <constraint firstItem="AYe-WQ-1YM" firstAttribute="top" secondItem="N3K-Ua-kfq" secondAttribute="top" id="zZ5-cI-J9Q"/>
+                            </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditTextCell" id="4nh-ZN-dGs" customClass="UIEditTextCell" customModule="gcmapp" customModuleProvider="target">
@@ -444,8 +450,11 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hdg-CY-xqD">
-                                            <rect key="frame" x="419" y="8" width="173" height="30"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hdg-CY-xqD">
+                                            <rect key="frame" x="497" y="8" width="95" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="95" id="Jr6-3f-ngD"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             <connections>
@@ -465,6 +474,7 @@
                                     <variation key="default">
                                         <mask key="constraints">
                                             <exclude reference="zI3-gg-0gI"/>
+                                            <exclude reference="ONa-vq-aHx"/>
                                             <exclude reference="XO2-cf-EEu"/>
                                         </mask>
                                     </variation>
@@ -605,7 +615,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Uk-gh-9w8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1460" y="-1881"/>
+            <point key="canvasLocation" x="1460" y="-1868"/>
         </scene>
         <!--DevelopmentTVC-->
         <scene sceneID="5Wy-Nr-8XG">
@@ -1145,8 +1155,8 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="z5G-Qn-1k0" id="JQ9-Ax-WfV">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BUILD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XtB-Lp-LhF">
-                                            <rect key="frame" x="8" y="15" width="35" height="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BUILD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XtB-Lp-LhF">
+                                            <rect key="frame" x="8" y="16" width="35" height="14"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="35" id="JNf-r0-qM2"/>
                                             </constraints>
@@ -1154,14 +1164,14 @@
                                             <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G67-V9-wcd">
-                                            <rect key="frame" x="46" y="12" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G67-V9-wcd">
+                                            <rect key="frame" x="46" y="13" width="418" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4r-4i-zvd">
-                                            <rect key="frame" x="518" y="12" width="42" height="20"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" misplaced="YES" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4r-4i-zvd">
+                                            <rect key="frame" x="518" y="13" width="42" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="200" id="act-48-rwF"/>
                                                 <constraint firstAttribute="width" constant="80" id="seP-S6-zEu"/>
@@ -1176,8 +1186,11 @@
                                                 </mask>
                                             </variation>
                                         </label>
-                                        <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCU-Vn-NQr">
-                                            <rect key="frame" x="470" y="7" width="97" height="30"/>
+                                        <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCU-Vn-NQr">
+                                            <rect key="frame" x="464" y="8" width="95" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="95" id="bGA-5w-MPJ"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             <connections>
@@ -1186,16 +1199,22 @@
                                         </textField>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="nCU-Vn-NQr" firstAttribute="leading" secondItem="G67-V9-wcd" secondAttribute="trailing" id="0bl-A1-FYd"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="nCU-Vn-NQr" secondAttribute="trailing" id="7xZ-Ch-acS"/>
                                         <constraint firstItem="D4r-4i-zvd" firstAttribute="trailing" secondItem="JQ9-Ax-WfV" secondAttribute="trailingMargin" id="AKf-Ge-hyn"/>
                                         <constraint firstItem="XtB-Lp-LhF" firstAttribute="leading" secondItem="JQ9-Ax-WfV" secondAttribute="leadingMargin" id="D1V-Z3-HIn"/>
                                         <constraint firstAttribute="centerY" secondItem="G67-V9-wcd" secondAttribute="centerY" id="Po2-nN-D7e"/>
                                         <constraint firstAttribute="centerY" secondItem="D4r-4i-zvd" secondAttribute="centerY" id="ReC-ql-2UR"/>
                                         <constraint firstAttribute="centerY" secondItem="XtB-Lp-LhF" secondAttribute="centerY" id="Wpe-jT-hZz"/>
+                                        <constraint firstItem="nCU-Vn-NQr" firstAttribute="baseline" secondItem="G67-V9-wcd" secondAttribute="baseline" id="bbm-p1-O3A"/>
+                                        <constraint firstItem="XtB-Lp-LhF" firstAttribute="baseline" secondItem="G67-V9-wcd" secondAttribute="baseline" id="bjH-X5-32R"/>
                                         <constraint firstItem="D4r-4i-zvd" firstAttribute="leading" secondItem="G67-V9-wcd" secondAttribute="trailing" id="d9w-Js-BLO"/>
                                         <constraint firstItem="G67-V9-wcd" firstAttribute="leading" secondItem="XtB-Lp-LhF" secondAttribute="trailing" constant="3" id="k6j-fQ-PdQ"/>
+                                        <constraint firstItem="nCU-Vn-NQr" firstAttribute="top" secondItem="JQ9-Ax-WfV" secondAttribute="topMargin" id="n10-nD-2UX"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
+                                            <exclude reference="n10-nD-2UX"/>
                                             <exclude reference="d9w-Js-BLO"/>
                                         </mask>
                                     </variation>
