--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -1155,23 +1155,29 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="z5G-Qn-1k0" id="JQ9-Ax-WfV">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BUILD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XtB-Lp-LhF">
-                                            <rect key="frame" x="8" y="16" width="35" height="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BUILD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XtB-Lp-LhF">
+                                            <rect key="frame" x="8" y="15" width="40" height="14"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="35" id="JNf-r0-qM2"/>
+                                                <constraint firstAttribute="width" constant="40" id="JNf-r0-qM2"/>
+                                                <constraint firstAttribute="width" constant="40" id="R2A-ag-sR1"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="JNf-r0-qM2"/>
+                                                </mask>
+                                            </variation>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G67-V9-wcd">
-                                            <rect key="frame" x="46" y="13" width="418" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G67-V9-wcd">
+                                            <rect key="frame" x="48" y="12" width="441" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" misplaced="YES" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4r-4i-zvd">
-                                            <rect key="frame" x="518" y="13" width="42" height="20"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4r-4i-zvd">
+                                            <rect key="frame" x="517" y="12" width="42" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="200" id="act-48-rwF"/>
                                                 <constraint firstAttribute="width" constant="80" id="seP-S6-zEu"/>
@@ -1187,9 +1193,9 @@
                                             </variation>
                                         </label>
                                         <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCU-Vn-NQr">
-                                            <rect key="frame" x="464" y="8" width="95" height="30"/>
+                                            <rect key="frame" x="489" y="7" width="70" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="95" id="bGA-5w-MPJ"/>
+                                                <constraint firstAttribute="width" constant="70" id="bGA-5w-MPJ"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -1202,20 +1208,33 @@
                                         <constraint firstItem="nCU-Vn-NQr" firstAttribute="leading" secondItem="G67-V9-wcd" secondAttribute="trailing" id="0bl-A1-FYd"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="nCU-Vn-NQr" secondAttribute="trailing" id="7xZ-Ch-acS"/>
                                         <constraint firstItem="D4r-4i-zvd" firstAttribute="trailing" secondItem="JQ9-Ax-WfV" secondAttribute="trailingMargin" id="AKf-Ge-hyn"/>
+                                        <constraint firstAttribute="centerY" secondItem="nCU-Vn-NQr" secondAttribute="centerY" id="Agl-tA-fGW"/>
                                         <constraint firstItem="XtB-Lp-LhF" firstAttribute="leading" secondItem="JQ9-Ax-WfV" secondAttribute="leadingMargin" id="D1V-Z3-HIn"/>
+                                        <constraint firstItem="G67-V9-wcd" firstAttribute="baseline" secondItem="nCU-Vn-NQr" secondAttribute="baseline" id="ItB-YD-N7A"/>
                                         <constraint firstAttribute="centerY" secondItem="G67-V9-wcd" secondAttribute="centerY" id="Po2-nN-D7e"/>
                                         <constraint firstAttribute="centerY" secondItem="D4r-4i-zvd" secondAttribute="centerY" id="ReC-ql-2UR"/>
                                         <constraint firstAttribute="centerY" secondItem="XtB-Lp-LhF" secondAttribute="centerY" id="Wpe-jT-hZz"/>
+                                        <constraint firstAttribute="centerY" secondItem="G67-V9-wcd" secondAttribute="centerY" id="anf-pw-rOG"/>
                                         <constraint firstItem="nCU-Vn-NQr" firstAttribute="baseline" secondItem="G67-V9-wcd" secondAttribute="baseline" id="bbm-p1-O3A"/>
                                         <constraint firstItem="XtB-Lp-LhF" firstAttribute="baseline" secondItem="G67-V9-wcd" secondAttribute="baseline" id="bjH-X5-32R"/>
                                         <constraint firstItem="D4r-4i-zvd" firstAttribute="leading" secondItem="G67-V9-wcd" secondAttribute="trailing" id="d9w-Js-BLO"/>
-                                        <constraint firstItem="G67-V9-wcd" firstAttribute="leading" secondItem="XtB-Lp-LhF" secondAttribute="trailing" constant="3" id="k6j-fQ-PdQ"/>
+                                        <constraint firstItem="G67-V9-wcd" firstAttribute="leading" secondItem="XtB-Lp-LhF" secondAttribute="trailing" id="k6j-fQ-PdQ"/>
                                         <constraint firstItem="nCU-Vn-NQr" firstAttribute="top" secondItem="JQ9-Ax-WfV" secondAttribute="topMargin" id="n10-nD-2UX"/>
+                                        <constraint firstItem="G67-V9-wcd" firstAttribute="leading" secondItem="XtB-Lp-LhF" secondAttribute="trailing" id="oF8-xH-A0b"/>
+                                        <constraint firstItem="D4r-4i-zvd" firstAttribute="baseline" secondItem="G67-V9-wcd" secondAttribute="baseline" id="tV4-SF-jie"/>
+                                        <constraint firstAttribute="centerY" secondItem="XtB-Lp-LhF" secondAttribute="centerY" id="xzS-Vn-cuj"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
+                                            <exclude reference="Wpe-jT-hZz"/>
+                                            <exclude reference="bjH-X5-32R"/>
+                                            <exclude reference="ItB-YD-N7A"/>
+                                            <exclude reference="Po2-nN-D7e"/>
+                                            <exclude reference="k6j-fQ-PdQ"/>
+                                            <exclude reference="bbm-p1-O3A"/>
                                             <exclude reference="n10-nD-2UX"/>
                                             <exclude reference="d9w-Js-BLO"/>
+                                            <exclude reference="tV4-SF-jie"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
