--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -1124,10 +1124,11 @@
                         <color key="barTintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
+                        <segue destination="xop-2T-INa" kind="relationship" relationship="viewControllers" id="4za-Gg-fAt"/>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="QTn-I7-ysP" kind="relationship" relationship="viewControllers" id="3d4-U8-cTU"/>
                         <segue destination="OHY-9d-js3" kind="relationship" relationship="viewControllers" id="OJN-qI-bME"/>
-                        <segue destination="xop-2T-INa" kind="relationship" relationship="viewControllers" id="4za-Gg-fAt"/>
+                        <segue destination="j7a-1c-qEw" kind="relationship" relationship="viewControllers" id="EzD-Sk-pk3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -1266,7 +1267,26 @@
             </objects>
             <point key="canvasLocation" x="628" y="368"/>
         </scene>
-        <!--Item-->
+        <!--Blank-->
+        <scene sceneID="0yt-NP-6zw">
+            <objects>
+                <viewController id="j7a-1c-qEw" customClass="measurementsPVC" customModule="GMA" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OXS-6z-mQZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="xY2-pO-hrY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="C3C-7P-XIe">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Blank" image="button_compass.png" id="geR-9k-72d"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EIA-6V-Uqz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-741" y="1153"/>
+        </scene>
+        <!--LMI2-->
         <scene sceneID="f9T-IN-xQu">
             <objects>
                 <viewController id="xop-2T-INa" customClass="LmiViewController" customModule="GMA" customModuleProvider="target" sceneMemberID="viewController">
@@ -1278,28 +1298,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AtK-1r-pGW" customClass="AccordionView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AtK-1r-pGW" customClass="AccordionView">
                                 <rect key="frame" x="0.0" y="20" width="600" height="531"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5wa-oN-roA" firstAttribute="top" secondItem="AtK-1r-pGW" secondAttribute="bottom" constant="20" id="1Z6-6U-73m"/>
-                            <constraint firstItem="AtK-1r-pGW" firstAttribute="leading" secondItem="ln2-rx-iI5" secondAttribute="leadingMargin" id="7ga-Wq-tPA"/>
-                            <constraint firstItem="AtK-1r-pGW" firstAttribute="top" secondItem="fNo-PW-Jwq" secondAttribute="bottom" constant="8" id="TJM-HW-blf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="AtK-1r-pGW" secondAttribute="trailing" constant="-6" id="Xwu-GY-sgw"/>
+                            <constraint firstItem="AtK-1r-pGW" firstAttribute="leading" secondItem="ln2-rx-iI5" secondAttribute="leadingMargin" constant="-16" id="9AU-K5-jgu"/>
+                            <constraint firstItem="AtK-1r-pGW" firstAttribute="top" secondItem="fNo-PW-Jwq" secondAttribute="bottom" id="Drk-2g-08m"/>
+                            <constraint firstItem="5wa-oN-roA" firstAttribute="top" secondItem="AtK-1r-pGW" secondAttribute="bottom" id="VjF-dR-saA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AtK-1r-pGW" secondAttribute="trailing" constant="-16" id="XN6-U3-gH9"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="7ga-Wq-tPA"/>
-                                <exclude reference="TJM-HW-blf"/>
-                                <exclude reference="Xwu-GY-sgw"/>
-                                <exclude reference="1Z6-6U-73m"/>
-                            </mask>
-                        </variation>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="2AJ-xg-oq6"/>
+                    <tabBarItem key="tabBarItem" title="LMI2" image="dot" id="2AJ-xg-oq6"/>
                     <connections>
                         <outlet property="accView" destination="AtK-1r-pGW" id="Vh3-jX-drO"/>
                     </connections>
@@ -1819,6 +1831,8 @@
     </scenes>
     <resources>
         <image name="Training" width="50" height="42"/>
+        <image name="button_compass.png" width="40" height="40"/>
+        <image name="dot" width="8" height="8"/>
         <image name="globe30" width="30" height="30"/>
         <image name="measure30" width="30" height="30"/>
         <image name="settings30" width="30" height="29"/>
